--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
 <body>
     <div id="app">
         <div class="wrapper">
-            <header class="flex">
+            <header class="flex fade-in">
                 <div class="logo-container">
                     <div class="underline init-line"></div>
-                    <div class="logo pink fade-in">
+                    <div class="logo pink">
                         <h1><span class="heading-bullet"></span><span> {{ pageTitle }}</span></h1>
                     </div>
+                </div>
+                <div class="header-search">
+                    <input type="text" placeholder="Search..">
                 </div>
             </header>
             <main class="fade-in">
