--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     </div>
                 </div>
                 <div class="header-search">
-                    <input type="text" placeholder="Search..">
+                    <input type="text" placeholder="検索する..">
                 </div>
             </header>
             <main class="fade-in">
