--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
                 <div class="logo-container">
                     <div class="underline init-line"></div>
                     <div class="logo pink">
-                        <h1><span class="heading-bullet"></span><span> {{ pageTitle }}</span></h1>
+                        <h1>
+                            <router-link to="/"><span class="heading-bullet"></span></router-link><span>
+                                {{ pageTitle }}</span>
+                        </h1>
                     </div>
                 </div>
                 <!-- <div class="header-search">
