--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                 </div> -->
                 <nav>
                     <ul>
-                        <router-link to="/keep" class="skew-wrapper pink-outline">
-                            <li class="unskew">キープ</li>
-                        </router-link>
                         <router-link to="/mail" class="skew-wrapper pink-outline">
-                            <li class="unskew">電子メール </li>
+                            <li class="unskew btn-icon btn-mail"> </li>
+                        </router-link>
+                        <router-link to="/keep" class="skew-wrapper pink-outline">
+                            <li class="unskew btn-icon btn-keep"></li>
                         </router-link>
                     </ul>
                 </nav>
