--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     </div>
     <script src="lib/vue.js"></script>
     <script src="lib/vue-router.js"></script>
+    <script src="lib/jscolor.js"></script>
     <script type="module" src="js/main.js"></script>
 </body>
 
