--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                             </div>
                         </transition>
                         <transition name="fade">
-                            <a href="#" v-if="isSearchablePage"  @click="onClickedSearch" class="skew-wrapper pink-outline">
+                            <a href="#" v-if="isSearchablePage" @click="onClickedSearch"
+                                class="skew-wrapper pink-outline">
                                 <li class="unskew btn-icon btn-search"> </li>
                             </a>
                         </transition>
