--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                                 <li class="unskew btn-icon btn-search"> </li>
                             </a>
                         </transition>
-                        <router-link to="/mail" class="skew-wrapper pink-outline">
+                        <!-- <router-link to="/mail" class="skew-wrapper pink-outline">
                             <li class="unskew btn-icon btn-mail"> </li>
-                        </router-link>
+                        </router-link> -->
                         <router-link to="/keep" class="skew-wrapper pink-outline">
                             <li class="unskew btn-icon btn-keep"></li>
                         </router-link>
