--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
             <main class="my-fade-in">
                 <div class="main-container">
                     <transition name="fade">
-                        <router-view></router-view>
+                        <keep-alive>
+                            <router-view></router-view>
+                        </keep-alive>
                     </transition>
                 </div>
             </main>
