--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
                         </h1>
                     </div>
                 </div>
-                <!-- <div class="header-search">
-                    <input type="text" class="header-search-input" placeholder="検索する..">
-                </div> -->
                 <nav>
                     <ul>
                         <transition name="fade">
@@ -37,9 +34,9 @@
                                 <li class="unskew btn-icon btn-search"> </li>
                             </a>
                         </transition>
-                        <!-- <router-link to="/mail" class="skew-wrapper pink-outline">
+                        <router-link to="/mail" class="skew-wrapper pink-outline">
                             <li class="unskew btn-icon btn-mail"> </li>
-                        </router-link> -->
+                        </router-link>
                         <router-link to="/keep" class="skew-wrapper pink-outline">
                             <li class="unskew btn-icon btn-keep"></li>
                         </router-link>
