--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="logo-container">
                     <div class="logo pink">
                         <h1>
-                            <router-link to="/" exact><span class="heading-bullet"></span></router-link><span>
+                            <router-link to="/" exact><span class="heading-bullet"></span></router-link><span class="page-title">
                                 {{ pageTitle }}</span>
                         </h1>
                     </div>
