--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+
     <div id="app">
         <div class="wrapper">
             <header class="flex my-fade-in">
@@ -18,7 +19,8 @@
                 <div class="logo-container">
                     <div class="logo pink">
                         <h1>
-                            <router-link to="/" exact><span class="heading-bullet"></span></router-link><span class="page-title">
+                            <router-link to="/" exact><span class="heading-bullet"></span></router-link><span
+                                class="page-title">
                                 {{ pageTitle }}</span>
                         </h1>
                     </div>
@@ -60,6 +62,7 @@
     <script src="lib/vue-router.js"></script>
     <script src="lib/jscolor.js"></script>
     <script type="module" src="js/main.js"></script>
+    
 </body>
 
 </html>
