--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
                     </keep-alive>
                 </transition>
             </main>
-            <footer class="my-fade-in">
+            <!-- <footer class="my-fade-in">
                 <div class="topline init-line"></div>
-                <!-- bla bla -->
-            </footer>
+            </footer> -->
         </div>
     </div>
     <script src="lib/vue.js"></script>
